--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<body style="background-color: yellow; text-align: center;">
+
+    <!-- First Div -->
+    <div>
+        <h1 id="f1" style="color: red;">Flowers photos</h1>
+        <p style="font-size: 18px;">
+            Flowers are the most beautiful part of nature. They come in different colors and spread fragrance everywhere.
+        </p>
+    </div>
+
+    <!-- Second Div -->
+    <div>
+        <h1 id="f2" style="color: green;">Roses pictures</h1>
+        <p style="font-size: 18px;">
+            Roses are known as the queen of flowers. They symbolize love, beauty, and purity.
+        </p>
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
